--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
                                         <!-- Favicon Image link -->
-  <link rel="icon" type="image/x-icon" href="https://graph.org/file/935d01943010dbe35bbbc.jpg">
-  <title>Maddie</title>  <!-- Page Title -->
+  <link rel="icon" type="image/x-icon" href="https://telegra.ph/file/19dae07365c3d78c93ed0.jpg">
+  <title> ~Lucifer~ </title>  <!-- Page Title -->
 </head>
 
 <body>
@@ -36,18 +36,19 @@
           </div>
           <!-- Nav Bar Start -->
           <div id="menu-list" class="menu-li">
-            <a href="https://github.com/MaddieTheRock">Github</a>
-            <a href="https://telegram.me/MaddieTheRock">Telegram</a>
+            <a href="https://github.com/GokulxD">Github</a>
+            <a href="https://telegram.me/GokulxD">Telegram</a>
+            <a href="https://instagram.com/lucifer.tgx">Instagram</a>
            </div>
         </div>
         
         <div class="logo">
           <!-- LOGO Here -->
-          <img src="https://telegra.ph/file/1c4587c06a6f475d89189.jpg">
+          <img src="https://telegra.ph/file/19dae07365c3d78c93ed0.jpg">
         </div>
         <div class="name">
-          <h2>Maddie</h2> <!--  Enter your name here. -->
-          <p>@MaddieTheRock</p> <!--  Enter your username here. -->
+          <h2>Lucifer</h2> <!--  Enter your name here. -->
+          <p>@Lucifer.tgx</p> <!--  Enter your username here. -->
         </div>
       </div>
       <div class="bottom">
@@ -56,14 +57,15 @@
           <hr>
           <br>
           <!-- Info here -->
-          <pre><p class="info" >HTML |•|JAVA-Python|•|</p></pre>
+          <pre><p class="info" >HTML |•|Js-Python|•|</p></pre>
           </pre>
         </div>
         <div class="social">
 
           <!--  Enter ur social media links here -->
-          <a href="https://github.com/MaddieTheRock"><i class="fab fa-github"></i></a>
-          <a href="https://telegran.me/MaddieTheRock"><i class="fab fa-telegram"></i></a>
+          <a href="https://github.com/GokulxD"><i class="fab fa-github"></i></a>
+          <a href="https://telegram.me/GokulxD"><i class="fab fa-telegram"></i></a>
+          <a href="https://instagram.com/lucifer.tgx"><i class="fab fa-instagram"></i></a>
           
 
           <!-- Some other social media icons copy it from below and paste it above
@@ -76,8 +78,9 @@
           -->
         </div>
         <div class="btns">
-          <div class="btn1"><a class="follow" href="https://github.com/MaddieTheRock" target="_blank">FOLLOW</a></div>
-          <div class="btn2"><a class="more" href="https://telegram.me/MaddieTheRock" target="_blank">CONTACT ON TG</a></div>
+          <div class="btn1"><a class="follow" href="https://github.com/MaddieTheRock" target="_blank">Follow</a></div>
+          <div class="btn2"><a class="more" href="https://telegram.me/MaddieTheRock" target="_blank">Contact on Tg</a></div>
+          <div class="btn3"><a class="contact" href="https://instagram.com/lucifer.tgx" target="_blank">Contact on Ig</a></div>
         </div>
       </div>
     </div>
