--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
         </div>
         <div class="btns">
           <div class="btn1"><a class="follow" href="https://github.com/MaddieTheRock" target="_blank">Follow</a></div>
-          <div class="btn2"><a class="more" href="https://telegram.me/MaddieTheRock" target="_blank">Contact on Tg</a></div>
-          <div class="btn3"><a class="contact" href="https://instagram.com/lucifer.tgx" target="_blank">Contact on Ig</a></div>
+          <div class="btn2"><a class="more" href="https://telegram.me/MaddieTheRock" target="_blank">Contact </a></div>
         </div>
       </div>
     </div>
